# mega-itmo-test

./: .gitignore  LICENSE  Makefile  README.md  loop.sh  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
